k8s/components/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lobehub
  labels:
    name: lobehub
    environment: development
    app: lobehub-stack
